- css 이미지 제작 및 수정

--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -47,7 +47,8 @@
 				이미지 맵은 링크에만 국한되지 않습니다. 이미지 맵 버튼을 클릭하면 프로그램이나 스크립트가 실행될 수도 있습니다.<br>
 				이미지 맵을 생성하는데 도움이되는 여러 도구가 있습니다.<br>
 				온라인 이미지맵 생성기를 사용하는 방법도 있습니다.
-				<span class="reference mt_l"><a href="https://www.image-maps.com/" target="_blank" title="새창열림">온라인 이미지맵 생성기</a></span>
+				<!--<span class="reference mt_l"><a href="https://www.image-maps.com/" target="_blank" title="새창열림">온라인 이미지맵 생성기</a></span>-->
+				<span class="reference mt_l"><a href="http://maschek.hu/imagemap/imgmap/" target="_blank" title="새창열림">온라인 이미지맵 생성기</a></span>
 			</p>
 			<ol class="ol_lst indent mt_s">
 				<li>
