--- a/assets/02-css/01-cssStart/03-css_history.html
+++ b/assets/02-css/01-cssStart/03-css_history.html
@@ -36,7 +36,7 @@
 		<article class="indent mt_l">
 			<h3>CSS 1</h3>
 			<p class="indent">
-				첫 CSS 규격은 공식 W3C 권고안이 되었으며 그 이름은 CSS1이다. 1996년 12월에 발표 되었습니다.
+				첫 CSS 규격은 공식 W3C 권고안이 되었으며 그 이름은 CSS1입니다. 1996년 12월에 발표 되었습니다.
 			</p>
 		</article>
 
