--- a/assets/02-css/01-cssStart/04-css_modules.html
+++ b/assets/02-css/01-cssStart/04-css_modules.html
@@ -36,10 +36,13 @@
 	</blockquote>
 
 	<figure class="img_figure mt_l">
-		<img src="/ukncs/images/css/CSS_Modules_and_Snapshots.png" alt="모듈과 표준화 과정(Modules and the standardization process)">
+		<img src="/ukncs/images/css/CSS_Modules_and_Snapshots.svg" alt="모듈과 표준화 과정(Modules and the standardization process)">
 		<figcaption class="reference">
+			[모듈과 표준화 과정]
+			<!--
 			[이미지출처]
 			<a href="https://developer.mozilla.org/ko/docs/Archive/CSS3" target="_blank" title="새창열림">https://developer.mozilla.org/ko/docs/Archive/CSS3</a>
+			-->
 		</figcaption>
 	</figure>
 
