--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -293,7 +293,7 @@
 		-->
 
 		<figure class="img_figure mt_m">
-			<img src="/ukncs/images/css/img_unit_table.png" alt="CSS 단위 비교 표">
+			<img src="/ukncs/images/css/img_unit_table.svg" alt="CSS 단위 비교 표">
 			<figcaption>[px, em, %, pt, HTML, KeyCode 비교표]</figcaption>
 		</figure>
 	</section>
