--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -244,7 +244,7 @@
 	</section>
 
 	<figure class="img_figure mt_xxl">
-		<img src="/ukncs/images/css/typo.png" alt="Typography 예시">
+		<img src="/ukncs/images/css/typo.svg" alt="Typography 예시">
 		<figcaption>[Typography 예시]</figcaption>
 	</figure>
 
