--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<h4>Search Area</h4>
 								<div class="form">
 									<input type="text" placeholder="검색어를 입력해 주세요." required />
-									<button type="button" class="sch_bt"><i>검색하기</i></button>
+									<button type="button" class="sch_bt search_submit"><i>검색하기</i></button>
 								</div>
 
 								<dl class="keyword_ex">
