--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -741,7 +741,9 @@
 				상단 좌측, 상단 우측, 하단 우측, 하단 좌측의 속성을 한번에 축약하여 지정할 수 있습니다.
 			</p>
 			<p class="mt_s">
-				<code>ex) border-radius:20px 20px 20x 20px</code>
+				<code>ex) border-radius: 20px 20px 20x 20px</code>
+				또는
+				<code>border-radius: 20px</code>
 			</p>
 		</article>
 
