- css 이미지 제작 및 수정

--- a/assets/01-html/01-htmlStart/htmlStart_bak.html
+++ b/assets/01-html/01-htmlStart/htmlStart_bak.html
@@ -177,7 +177,7 @@
 	<article id="html_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>HTML 요소</h2>
 		<figure class="img_figure mt_l">
-			<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
+			<img src="/ukncs/images/html/uxkm_html_tag_structure.svg" alt="html 요소 설명">
 			<figcaption>[HTML 요소의 부분 설명]</figcaption>
 		</figure>
 
