--- a/assets/02-css/03-cssMiddleclass/03-css_counter.html
+++ b/assets/02-css/03-cssMiddleclass/03-css_counter.html
@@ -150,8 +150,8 @@
 	</section>
 
 	<figure class="img_figure mt_l">
-		<figcaption class="mt_0 font-16 color">중첩 관계도(임시 - 디자인 예정)</figcaption>
-		<img src="/ukncs/images/css/img_calc.png" alt="중첩 관계도" class="mt_m">
+		<figcaption class="mt_0 font-16 color">counters 문법의 중첩 관계도</figcaption>
+		<img src="/ukncs/images/css/cssMiddleclass/uxkm_counters.svg" alt="counters 문법의 중첩 관계도" class="mt_m">
 	</figure>
 
 	<section class="view_editor edit_code mt_l" data-target="css/step02/3.3.counter/3.3.counter.html">
