--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
@@ -8,7 +8,7 @@
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
-			<b class="t_blue">CSS3 모듈 part1</b> 에서는 <code>&lt;input&gt;</code>의 속성 중<br>
+			<b class="t_blue">CSS3 모듈 part1</b> 에서는 CSS3 모듈의 속성 중<br>
 			<code>
 				- CSS positioned layout module Level 3<br>
 				- CSS background and border module Level 3<br>
@@ -275,7 +275,7 @@
 				이렇게 나눠진 영역이 요소의 테두리 이미지를 이룹니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/border-image-slice.png" alt="border-image-slice">
+				<img src="/ukncs/images/css/cssMiddleclass/uxkm_border-image-slice.svg" alt="border-image-slice">
 				<figcaption>[border-image-slice]</figcaption>
 			</figure>
 			<div class="ol_lst indent mt_s">
