--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part2.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part2.html
@@ -8,7 +8,7 @@
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
-			<b class="t_blue">CSS3 모듈 part2</b> 에서는 <code>&lt;input&gt;</code>의 속성 중<br>
+			<b class="t_blue">CSS3 모듈 part2</b> 에서는 CSS3 모듈의 속성 중<br>
 			<code>
 				- CSS basic user interface module Level 3<br>
 				- CSS3 gradiant<br>
@@ -96,7 +96,7 @@
 			</p>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/linear-gradient.png" alt="선형 그레이디언트의 구성">
+				<img src="/ukncs/images/css/cssMiddleclass/uxkm_linear-gradient.svg" alt="선형 그레이디언트의 구성">
 				<figcaption>[선형 그레이디언트의 구성]</figcaption>
 			</figure>
 
