--- a/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
+++ b/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
@@ -69,12 +69,8 @@
 			반응형 웹과 적응형 웹 두 가지 방법 모두 근본적으로는 웹 사이트가 모바일 기기와 다양한 화면 크기에서 원활한 정보를 제공하여 더 나은 모바일 사용자 경험을 제공하기 위한 방법입니다.
 		</p>
 		<figure class="img_figure mt_m">
-			<img src="/ukncs/images/css/img_media-query-breakpoints.jpg" alt="viewport breakpoint">
+			<img src="/ukncs/images/css/cssMiddleclass/uxkm_media-query-breakpoints.svg" alt="viewport breakpoint">
 			<figcaption>[viewport breakpoint]</figcaption>
-		</figure>
-		<figure class="img_figure mt_m">
-			<img src="/ukncs/images/css/img_media_awd-rwd.jpg" alt="반응형 웹 VS 적응형 웹">
-			<figcaption>[반응형 웹 VS 적응형 웹]</figcaption>
 		</figure>
 
 		<!-- 반응형 웹(Responsive Web) -->
@@ -136,7 +132,7 @@
 		<!-- 반응형 웹과 적응형 웹의 특징 비교 -->
 		<article class="indent_max mt_l">
 			<h3 class="ml_mn t_blue">반응형 웹과 적응형 웹의 특징 비교</h3>
-			<div class="ol_lst mt_ms indent">
+			<div class="ol_lst mt_ms">
 				<ol>
 					<li class="line_code font14">
 						<strong class="mb_sm">반응형 웹</strong>
@@ -156,6 +152,10 @@
 					</li>
 				</ol>
 			</div>
+			<figure class="img_figure mt_m">
+				<img src="/ukncs/images/css/img_media_awd-rwd.jpg" alt="반응형 웹 VS 적응형 웹">
+				<figcaption>[반응형 웹 VS 적응형 웹]</figcaption>
+			</figure>
 		</article>
 
 		<!-- 모바일 퍼스트 디자인(Mobile First Design) -->
