--- a/assets/guide.html
+++ b/assets/guide.html
@@ -161,7 +161,7 @@
 		<!-- 참조 링크 박스 -->
 
 		<figure class="img_figure mt_l">
-			<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
+			<img src="/ukncs/images/html/uxkm_html_tag_structure.svg" alt="html 요소 설명">
 			<figcaption>[HTML 요소의 부분 설명]</figcaption>
 		</figure>
 		<!-- 이미지 박스 -->
