--- a/ukncs/tutorials/css/step02/3.3.counter/3.3.counter.html
+++ b/ukncs/tutorials/css/step02/3.3.counter/3.3.counter.html
@@ -27,7 +27,7 @@
 					<li>item</li>			<!--   item[1]++ (=2)  -->
 					<li>item				<!--   item[1]++ (=3)  -->
 						<ol>				<!--   {item[2]=0      -->
-							<LI>item</LI>	<!--    item[2]++ (=1) -->
+							<li>item</li>	<!--    item[2]++ (=1) -->
 						</ol>				<!--                   -->
 						<ol>				<!--   }{item[2]=0     -->
 							<li>item</li>	<!--    item[2]++ (=1) -->
