--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -6,7 +6,7 @@
 	</header>
 
 	<figure class="img_figure mt_xxl">
-		<img src="/assets/lib/img/html/img_html_tag_structure.png" alt="html 요소 설명">
+		<img src="/ukncs/images/html/uxkm_html_tag_structure.svg" alt="html 요소 설명">
 		<figcaption>[HTML 요소의 부분 설명]</figcaption>
 	</figure>
 
