--- a/ukncs/tutorials/html/09-forms/9.3.input_element_src.html
+++ b/ukncs/tutorials/html/09-forms/9.3.input_element_src.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<label for="img">Click on the image</label><br>
-		<input id="img" type="image" src="/ukncs/images/html/image_button.png" alt="컨텐츠 다이어그램">
+		<input id="img" type="image" src="/ukncs/images/html/uxkm_image_button.svg" alt="컨텐츠 다이어그램">
 
 		<script>
 			var image = document.getElementById('img');
