- css 이미지 제작 및 수정

--- a/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
+++ b/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
@@ -153,7 +153,7 @@
 				</ol>
 			</div>
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/img_media_awd-rwd.jpg" alt="반응형 웹 VS 적응형 웹">
+				<img src="/ukncs/images/css/cssMiddleclass/uxkm_media_awd-rwd.svg" alt="반응형 웹 VS 적응형 웹">
 				<figcaption>[반응형 웹 VS 적응형 웹]</figcaption>
 			</figure>
 		</article>
@@ -191,7 +191,7 @@
 			</p>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/img_media_rwd_mobile-first.jpg" alt="모바일 우선주의(Mobile First)">
+				<img src="/ukncs/images/css/cssMiddleclass/uxkm_media_rwd_mobile-first.svg" alt="모바일 우선주의(Mobile First)">
 				<figcaption class="t_black weight-500">[모바일 우선주의(Mobile First)]</figcaption>
 				<p class="mt_s">
 					모바일 사이트에 미디어 쿼리를 더 해서 데스크탑 화면에 맞게 보여주는 방식이 RWD의 'Mobile First' 입니다.<br>
@@ -205,7 +205,7 @@
 				</p>
 			</figure>
 			<figure class="img_figure mt_ms">
-				<img src="/ukncs/images/css/img_media_rwd_desktop-first.jpg" alt="데스크탑 우선주의(Desktop First)">
+				<img src="/ukncs/images/css/cssMiddleclass/uxkm_media_rwd_desktop-first.svg" alt="데스크탑 우선주의(Desktop First)">
 				<figcaption class="t_black weight-500">[데스크탑 우선주의(Desktop First)]</figcaption>
 				<p class="mt_s">
 					모바일 퍼스트와는 반대로 데스크탑 화면에 맞추어진 사이트에 미디어쿼리를 더해 모바일 사이트를 만드는 방식입니다.<br>
@@ -303,7 +303,7 @@
 							</ul>
 						</article>
 						<figure class="img_figure mt_ms">
-							<img src="/ukncs/images/css/md-patterns1.png" alt="유동형 Mostly fluid">
+							<img src="/ukncs/images/css/cssMiddleclass/uxkm_md-patterns1.svg" alt="유동형 Mostly fluid">
 							<figcaption>[유동형 Mostly fluid]</figcaption>
 						</figure>
 						<section class="view_editor edit_code mt_ms" data-target="css/step02/3.9.media/3.9.6.css3-media-rwd_mostly-fluid.html">
@@ -333,7 +333,7 @@
 							</ul>
 						</article>
 						<figure class="img_figure mt_ms">
-							<img src="/ukncs/images/css/md-patterns2.png" alt="열 드롭 Column drop">
+							<img src="/ukncs/images/css/cssMiddleclass/uxkm_md-patterns2.svg" alt="열 드롭 Column drop">
 							<figcaption>[열 드롭 Column drop]</figcaption>
 						</figure>
 						<section class="view_editor edit_code mt_ms" data-target="css/step02/3.9.media/3.9.6.css3-media-rwd_column-drop.html">
@@ -364,7 +364,7 @@
 							</ul>
 						</article>
 						<figure class="img_figure mt_ms">
-							<img src="/ukncs/images/css/md-patterns3.png" alt="레이아웃 시프터 Layout shifter">
+							<img src="/ukncs/images/css/cssMiddleclass/uxkm_md-patterns3.svg" alt="레이아웃 시프터 Layout shifter">
 							<figcaption>[레이아웃 시프터 Layout shifter]</figcaption>
 						</figure>
 						<section class="view_editor edit_code mt_ms" data-target="css/step02/3.9.media/3.9.6.css3-media-rwd_layout-shifter.html">
@@ -393,7 +393,7 @@
 							</ul>
 						</article>
 						<figure class="img_figure mt_ms">
-							<img src="/ukncs/images/css/md-patterns4.png" alt="작은 변화 Tiny tweaks">
+							<img src="/ukncs/images/css/cssMiddleclass/uxkm_md-patterns4.svg" alt="작은 변화 Tiny tweaks">
 							<figcaption>[작은 변화 Tiny tweaks]</figcaption>
 						</figure>
 						<section class="view_editor edit_code mt_ms" data-target="css/step02/3.9.media/3.9.6.css3-media-rwd_tiny-tweaks.html">
@@ -418,7 +418,7 @@
 							</ul>
 						</article>
 						<figure class="img_figure mt_ms">
-							<img src="/ukncs/images/css/md-patterns5.png" alt="오프 캔버스 Off canvas">
+							<img src="/ukncs/images/css/cssMiddleclass/uxkm_md-patterns5.svg" alt="오프 캔버스 Off canvas">
 							<figcaption>[오프 캔버스 Off canvas]</figcaption>
 						</figure>
 					</li>
