- flex 이미지 작업 중

--- a/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part2.html
@@ -328,7 +328,7 @@
 			</ol>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/img_transform-perspective.png" alt="3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림">
+				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-perspective.svg" alt="3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림">
 				<figcaption>[3D 효과를 이해하기 위한 x축, y축, z축에 대한 그림]</figcaption>
 			</figure>
 			<div class="view_editor edit_code mt_m" data-target="css/step03/4.1.transform/4.1.2.css3-3d-transform-perspective.html">
@@ -372,7 +372,7 @@
 			</div>
 
 			<figure class="img_figure mt_m">
-				<img src="/ukncs/images/css/img_transform_backface-visibility.png" alt="backface-visibility">
+				<img src="/ukncs/images/css/cssAdvanced/uxkm_transform_backface-visibility.svg" alt="backface-visibility">
 				<figcaption>[backface-visibility]</figcaption>
 			</figure>
 			<div class="view_editor edit_code mt_ml" data-target="css/step03/4.1.transform/4.1.2.css3-3d-transform-backface-visibility.html">
