--- a/assets/02-css/04-cssAdvanced/02-css_transition.html
+++ b/assets/02-css/04-cssAdvanced/02-css_transition.html
@@ -165,13 +165,13 @@
 			</p>
 			</div>
 			<figure class="img_figure mt_s">
-				<figcaption class="mt_0">[cubic-bezier 곡선 그래프1]</figcaption>
-				<img src="/ukncs/images/css/img_transition_cubic-bezier1.png" alt="cubic-bezier 곡선 그래프1" class="mt_m">
+				<figcaption class="mt_0">[cubic-bezier 곡선 그래프]</figcaption>
+				<img src="/ukncs/images/css/cssAdvanced/uxkm_transition_cubic-bezier.svg" alt="cubic-bezier 곡선 그래프1" class="mt_m">
 			</figure>
-			<figure class="img_figure mt_s">
+			<!--<figure class="img_figure mt_s">
 				<figcaption class="mt_0">[cubic-bezier 곡선 그래프2]</figcaption>
 				<img src="/ukncs/images/css/img_transition_cubic-bezier2.png" alt="cubic-bezier 곡선 그래프2" class="mt_m">
-			</figure>
+			</figure>-->
 		</article>
 	</section>
 
