--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
@@ -60,7 +60,7 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">Flexbox 속성 요약 설명</h2>
 		<figure class="img_figure mt_ml">
-			<img src="/ukncs/images/css/flex-base.jpg" alt="Flexbox 기본 구조">
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-base.svg" alt="Flexbox 기본 구조">
 			<figcaption>[Flexbox 기본 구조]</figcaption>
 		</figure>
 		<div class="ol_lst mt_ml">
@@ -108,9 +108,11 @@
 			</div>
 		</section>
 		<figure class="img_figure mt_ml">
-			<figcaption class="mt_0">[Flexbox terminology diagram from official W3C specification.]</figcaption>
+			<!--<figcaption class="mt_0">[Flexbox terminology diagram from official W3C specification.]</figcaption>
 			<img src="/ukncs/images/css/flex-direction-terms.svg" alt="Flexbox terminology diagram from official W3C specification." class="mt_m">
-			<img src="/ukncs/images/css/flex-diagram.png" alt="Flexbox terminology diagram from official W3C specification.">
+			<img src="/ukncs/images/css/flex-diagram.png" alt="Flexbox terminology diagram from official W3C specification.">-->
+			<figcaption class="mt_0">[Flexbox 용어]</figcaption>
+			<img src="/ukncs/images/css/flexbox/uxkm_flex_terminology.svg" alt="Flexbox terminology diagram from official W3C specification." class="mt_m">
 		</figure>
 
 		<p class="mt_xl">Flexbox 속성의 값에 따라 flex 항목은 main axis(기본 축) 또는 cross axis(교차 축)을 따라 flex 컨테이너 안에 배치됩니다.</p>
@@ -124,7 +126,7 @@
 		</div>
 		<figure class="img_figure indent mt_m">
 			<figcaption class="mt_0">[주 축(main-axis)과 교차 축(cross-axis)]</figcaption>
-			<img src="/ukncs/images/css/flex-direction-main-axis.jpg" alt="주 축(main-axis)과 교차 축(cross-axis)" class="mt_m">
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-direction-main-axis.svg" alt="주 축(main-axis)과 교차 축(cross-axis)" class="mt_m">
 		</figure>
 
 		<div class="ol_lst mt_xl">
