--- a/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
@@ -146,7 +146,7 @@
 						<p>주어진 각도가 양수이면 x, y축의 양의 방향으로, 음수이면 x, y축의 음의 방향으로 기울입니다.</p>
 						<p>x, y축을 한번에 지정 가능하며, 한번에 지정할 경우 콤마(,)로 구분하여 사용하고, x축, y축을 따로 명시하여 사용할 수 있습니다.</p>
 						<figure class="img_figure mt_s">
-							<img src="/ukncs/images/css/img_transform-skew.png" alt="skew() 함수">
+							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-skew.svg" alt="skew() 함수">
 							<figcaption>[skew() 함수]</figcaption>
 						</figure>
 						<p class="mt_s">
@@ -221,7 +221,7 @@
 							<code>translate()</code> 함수는 물리적으로 시야에 존재하는 한 해당 요소가 본래 차지하고 있던 공간을 그대로 유지하게 됩니다.
 						</p>
 						<figure class="img_figure mt_s">
-							<img src="/ukncs/images/css/img_transform-translate.png" alt="translate 함수 예시">
+							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-translate.svg" alt="translate 함수 예시">
 							<figcaption>
 								<i>[translate 함수 예시]</i>
 								<p class="mt_s">8번 박스를 이동시켰음에도 본래 차지(그 공간을 사용하지 않더라도)하고 있던 공간(빨간 보더 공간)은 유지합니다.</p>
@@ -284,13 +284,16 @@
 							a1 c1 b1 d1 a2 c2 b2 d2 = a1 a2 + c1 b2 a1 c2 + c1 d2 b1 a2 + d1 b2 b1 c2 + d1 d2
 						</p>
 						<figure class="img_figure mt_s">
-							<figcaption class="mt_0">[<b class="t_black weight-500">matrix 표</b> 이미지 참조 : wikimedia matrix]</figcaption>
+							<figcaption class="mt_0">[<b class="t_black weight-500">matrix 표</b><!-- 이미지 참조 : wikimedia matrix]--></figcaption>
+							<!--
 							<div class="mt_m">
-								<img src="/ukncs/images/css/img_matrix2.png" alt="matrix 표" class="max-w900">
+								<img src="/ukncs/images/css/cssAdvanced/img_matrix2.png" alt="matrix 표" class="max-w900">
 							</div>
 							<div class="mt_l">
 								<img src="/ukncs/images/css/2D_affine_transformation_matrix.svg" alt="matrix 표" class="max-w700">
 							</div>
+							-->
+							<img src="/ukncs/images/css/cssAdvanced/uxkm_2D_affine_transformation_matrix 1.svg" alt="matrix 표" class="max-w600 mt_m">
 						</figure>
 						<div class="view_editor ex_code mt_s" data-target="css/step03/4.1.transform/4.1.1.css3-2d-transform-matrix-function.html">
 							<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -305,7 +308,7 @@
 		<!-- transform-origin 속성 -->
 		<article class="indent mt_xxl">
 			<h3 class="ml_mn"><i class="t_blue">transform-origin</i> 속성</h3>
-			<p class="mt_s">요소의 기본기준점을 설정할 때 사용되며, 기본기준점은 요소의 정중앙 입이다. (50%,50%)</p>
+			<p class="mt_s">요소의 기본기준점을 설정할 때 사용되며, 기본기준점은 요소의 정중앙 입이다. (50%, 50%)</p>
 			<p>이동은 기준점을 변경하여도 일정 거리만큼 이동하므로 의미가 없습니다.</p>
 			<p>설정값으로 %, px, top left, bottom right을 사용할 수 있습니다. 0, 0은 top left, 100% 100%는 bottom right과 같은 값입니다.</p>
 			<p>transform-origin은 transform에 대한 원점을 지정하는 속성입니다.</p>
