- flex 이미지 작업 중

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
@@ -138,8 +138,11 @@
 		</div>
 		<figure class="img_figure indent mt_m">
 			<figcaption class="mt_0">[시작점(flex-start)과 끝점(flex-end)]</figcaption>
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-direction-main(cross)-start.svg" alt="시작점(flex-start)과 끝점(flex-end)" class="mt_m">
+			<!--
 			<img src="/ukncs/images/css/flex-direction-main-start.jpg" alt="시작점(flex-start)과 끝점(flex-end)" class="mt_m">
 			<img src="/ukncs/images/css/flex-direction-cross-start.jpg" alt="시작점(flex-start)과 끝점(flex-end)">
+			-->
 		</figure>
 
 		<p class="mt_xl"><code>flexbox</code>를 사용하려면 먼저 부모 컨테이너에 <code>display: flex;</code>속성을 CSS에 추가하여 부모 컨테이너를 <code>flex</code> 컨테이너로 변환해야 합니다.</p>
@@ -154,10 +157,10 @@
 				<li>}</li>
 			</ul>
 		</div>
-		<figure class="img_figure indent mt_m">
+		<!--<figure class="img_figure indent mt_m">
 			<figcaption class="mt_0">[출처 : Scott Domes]</figcaption>
 			<img src="/ukncs/images/css/flex-display.gif" alt="출처 : Scott Domes" class="mt_m">
-		</figure>
+		</figure>-->
 
 		<p class="mt_xl">
 			부모 요소가 <code>inline</code> 요소인 경우 <code>inline-flex</code>을 지정합니다.<br>
