--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part2.html
@@ -11,7 +11,7 @@
 		<p class="mt_ms"><code>display: flex;</code>를 설정한 엘리먼트 입니다</p>
 		<figure class="img_figure mt_m">
 			<figcaption class="mt_0">[Flexbox Container]</figcaption>
-			<img src="/ukncs/images/css/flex-container.svg" alt="Flexbox Container" class="mt_m max-w550">
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-container.svg" alt="Flexbox Container" class="mt_m max-w550">
 		</figure>
 
 		<!-- display -->
@@ -72,7 +72,7 @@
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[flex-direction을 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-direction.svg" alt="flex-direction을 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-direction.svg" alt="flex-direction을 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
 				<!--<img src="/ukncs/images/css/flex-direction-diagram.png" alt="Flexbox Container" class="max-w650">-->
 			</figure>
 
@@ -86,16 +86,15 @@
 							대신 <i class="t_blue">주축(main axis)</i> 및 <i class="t_blue">교차 축(cross axis)</i>으로 불리며 사용됩니다.<br>
 							주축은 <code>flex-direction</code>에 의해 정의되며 4개의 값<code>(row | row-reverse | column | column-reverse)</code>을 가질 수 있습니다.
 						</p>
-						<div class="line_code outline">
-							<p class="mt_m">
-								<code>row</code> 또는 <code>row-reverse</code>의 <mark>주축은 인라인 방향(가로 행)</mark>이며, <mark>교차 축은 블록 방향(세로 열)</mark>입니다.<br>
-								<img src="/ukncs/images/css/main_axis1.png" alt="flex-direction:row; 기준 main axis" class="mt_s" />
-							</p>
-							<p class="mt_m">
-								<code>column</code> 또는 <code>column-reverse</code>의 <mark>주축은 블록 방향(세로 열)</mark>이며, <mark>교차 축은 인라인 방향(가로 행)</mark>입니다.<br>
-								<img src="/ukncs/images/css/main_axis2.png" alt="flex-direction:column; 기준 main axis" class="mt_s" />
-							</p>
-						</div>
+						<figure class="img_figure mt_m">
+							<figcaption class="mt_0"><code>row</code> 또는 <code>row-reverse</code>의 <mark>주축은 인라인 방향(가로 행)</mark>이며, <mark>교차 축은 블록 방향(세로 열)</mark>입니다.</figcaption>
+							<img src="/ukncs/images/css/flexbox/uxkm_flex_main_axis(row).svg" alt="flex-direction:row; 기준 main axis" class="mt_m" />
+						</figure>
+						<figure class="img_figure mt_m">
+							<figcaption class="mt_0"><code>column</code> 또는 <code>column-reverse</code>의 <mark>주축은 블록 방향(세로 열)</mark>이며, <mark>교차 축은 인라인 방향(가로 행)</mark>입니다.</figcaption>
+							<img src="/ukncs/images/css/flexbox/uxkm_flex_main_axis(column).svg" alt="flex-direction:column; 기준 main axis" class="mt_m" />
+						</figure>
+
 						<p class="mt_m">
 							<code>flex-direction</code>이 선언되지 않으면 기본값인 <code>row</code>가 적용되므로 <mark>주축은 인라인 방향(가로 행)</mark>이며, <mark>교차 축은 블록 방향(세로 열)</mark>입니다.
 						</p>
@@ -115,8 +114,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-direction: row;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-direction-row.jpg" alt="flex-direction: row;" class="mt_m max-w400"><!--<br>
-							<img src="/ukncs/images/css/flex-direction-row-axix.png" alt="flex-direction: row;" class="mt_m max-w300">-->
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction-row.svg" alt="flex-direction: row;" class="mt_m">
 						</figure>
 					</li>
 
@@ -134,8 +132,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-direction: row-reverse;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-direction-row-reverse.jpg" alt="flex-direction: row-reverse;" class="mt_m max-w400"><!--<br>
-							<img src="/ukncs/images/css/flex-direction-row-reverse-axix.png" alt="flex-direction: row-reverse;" class="mt_m max-w300">-->
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction-row-reverse.svg" alt="flex-direction: row-reverse;" class="mt_m">
 						</figure>
 					</li>
 
@@ -152,8 +149,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-direction: column;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-direction-column.jpg" alt="flex-direction: column;" class="mt_m max-w400"><!--<br>
-							<img src="/ukncs/images/css/flex-direction-column-axix.png" alt="flex-direction: column;" class="mt_m max-w300">-->
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction-column.svg" alt="flex-direction: column;" class="mt_m">
 						</figure>
 					</li>
 
@@ -170,8 +166,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-direction: column-reverse;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-direction-column-reverse.jpg" alt="flex-direction: column-reverse;" class="mt_m max-w400"><!--<br>
-							<img src="/ukncs/images/css/flex-direction-column-reverse-axix.png" alt="flex-direction: column-reverse;" class="mt_m max-w300">-->
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction-column-reverse.svg" alt="flex-direction: column-reverse;" class="mt_m">
 						</figure>
 					</li>
 
@@ -208,7 +203,7 @@
 
 			<figure class="img_figure mt_l">
 				<figcaption class="mt_0">[flex-direction 예시]</figcaption>
-				<img src="/ukncs/images/css/flexbox-flex-direction.png" alt="flex-direction 예시" class="mt_m max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-direction.svg" alt="flex-direction 예시" class="mt_m">
 			</figure>
 			<section class="view_editor edit_code mt_ml" data-target="/css/step03/4.4.flexible/4.4.1.flexible-flex-direction.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -245,8 +240,8 @@
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[flex-wrap을 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-wrap.svg" alt="flex-wrap을 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
-				<img src="/ukncs/images/css/flex-wrap.jpg" alt="flex-direction 예시" class="mt_m max-w600">
+				<!--<img src="/ukncs/images/css/flex-wrap.svg" alt="flex-wrap을 시각적으로 설명하는 다이어그램" class="mt_m max-w650">-->
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-wrap.svg" alt="flex-direction 예시" class="mt_m">
 			</figure>
 
 			<div class="ol_lst indent mt_l">
@@ -264,7 +259,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-wrap: nowrap;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-wrap-nowrap.jpg" alt="flex-wrap: nowrap;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-wrap-nowrap.svg" alt="flex-wrap: nowrap;" class="mt_m">
 						</figure>
 					</li>
 
@@ -285,7 +280,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-wrap: wrap;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-wrap-wrap.jpg" alt="flex-wrap: wrap;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-wrap-wrap.svg" alt="flex-wrap: wrap;" class="mt_m">
 						</figure>
 					</li>
 
@@ -302,7 +297,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[flex-wrap: wrap-reverse;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-flex-wrap-wrap-reverse.jpg" alt="flex-wrap: wrap-reverse;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-wrap-wrap-reverse.svg" alt="flex-wrap: wrap-reverse;" class="mt_m">
 						</figure>
 					</li>
 				</ol>
@@ -342,7 +337,7 @@
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[수평 언어(영어), 수직 언어(일본어)의 배치와 방향 차이를 보여주는 이미지]</figcaption>
-				<img src="/ukncs/images/css/flex-flow-example.png" alt="수평 언어(영어), 수직 언어(일본어)의 배치와 방향 차이를 보여주는 이미지" class="mt_m max-w650">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-flow-example.svg" alt="수평 언어(영어), 수직 언어(일본어)의 배치와 방향 차이를 보여주는 이미지" class="mt_m">
 			</figure>
 
 			<section class="view_editor edit_code mt_ml" data-target="/css/step03/4.4.flexible/4.4.1.flexible-flex-flow.html">
@@ -380,8 +375,8 @@
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[justify-content를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-justify-content.svg" alt="justify-content를 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
-				<img src="/ukncs/images/css/flex-justify-content.jpg" alt="justify-content를 시각적으로 설명하는 다이어그램" class="mt_m max-w600">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-justify-content_pc.svg" alt="justify-content를 시각적으로 설명하는 다이어그램" class="mt_m dp_md_pc mg_center">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-justify-content_md.svg" alt="justify-content를 시각적으로 설명하는 다이어그램" class="mt_m dp_md mg_center">
 			</figure>
 
 			<div class="ol_lst indent mt_l">
@@ -399,7 +394,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: flex-start;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-flex-start.jpg" alt="flex-justify-content: flex-start;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-flex-start.svg" alt="flex-justify-content: flex-start;" class="mt_m">
 						</figure>
 					</li>
 
@@ -416,7 +411,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: flex-end;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-flex-end.jpg" alt="flex-justify-content: flex-end;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-flex-end.svg" alt="flex-justify-content: flex-end;" class="mt_m">
 						</figure>
 					</li>
 
@@ -433,7 +428,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: center;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-center.jpg" alt="flex-justify-content: center;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-center.svg" alt="flex-justify-content: center;" class="mt_m">
 						</figure>
 					</li>
 
@@ -453,7 +448,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: space-between;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-space-between.jpg" alt="flex-justify-content: space-between;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-space-between.svg" alt="flex-justify-content: space-between;" class="mt_m">
 						</figure>
 					</li>
 
@@ -473,7 +468,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: space-around;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-space-around.jpg" alt="flex-justify-content: space-around;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-space-around.svg" alt="flex-justify-content: space-around;" class="mt_m">
 						</figure>
 					</li>
 
@@ -492,7 +487,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[justify-content: space-evenly;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-justify-content-space-evenly.jpg" alt="flex-justify-content: space-evenly;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-justify-content-space-evenly.svg" alt="flex-justify-content: space-evenly;" class="mt_m">
 						</figure>
 					</li>
 				</ol>
@@ -531,14 +526,14 @@
 			<div class="line_code_box line_code_number mt_m">
 				<ul>
 					<li>.box {</li>
-					<li class="indent">justify-content: flex-start | flex-end | center | space-between | space-around | space-evenly | start | end | left | right ... + safe | unsafe;</li>
+					<li class="indent">align-content: flex-start | flex-end | center | space-between | space-around | space-evenly | stretch | start | end | baseline | first baseline | last baseline + ... safe | unsafe;</li>
 					<li>}</li>
 				</ul>
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[align-content를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-align-content.svg" alt="align-content를 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
-				<img src="/ukncs/images/css/flex-align-content.jpg" alt="align-content를 시각적으로 설명하는 다이어그램" class="mt_m max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-content_pc.svg" alt="align-content를 시각적으로 설명하는 다이어그램" class="mt_m dp_md_pc mg_center">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-content_md.svg" alt="align-content를 시각적으로 설명하는 다이어그램" class="mt_m dp_md mg_center">
 			</figure>
 
 			<div class="ol_lst indent mt_l">
@@ -556,7 +551,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : stretch;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-stretch.jpg" alt="align-content : stretch;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-stretch.svg" alt="align-content : stretch;" class="mt_m">
 						</figure>
 					</li>
 
@@ -573,7 +568,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : flex-start;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-flex-start.jpg" alt="align-content : flex-start;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-flex-start.svg" alt="align-content : flex-start;" class="mt_m">
 						</figure>
 					</li>
 
@@ -590,7 +585,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : flex-end;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-flex-end.jpg" alt="align-content : flex-end;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-flex-end.svg" alt="align-content : flex-end;" class="mt_m">
 						</figure>
 					</li>
 
@@ -607,7 +602,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : center;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-center.jpg" alt="align-content : center;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-center.svg" alt="align-content : center;" class="mt_m">
 						</figure>
 					</li>
 
@@ -624,14 +619,14 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : space-between;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-space-between.jpg" alt="align-content : space-between;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-space-between.svg" alt="align-content : space-between;" class="mt_m">
 						</figure>
 					</li>
 
 					<!-- space-around -->
 					<li class="tit_h4 mt_l">
 						<h4>space-around</h4>
-						<p class="mt_s">flex Item의 각 행이 flex container의 여백을 균등하게 나누어 정렬됩니다.</p>
+						<p class="mt_s">flex Item의 각 행이 동일한 여유공간을 두고 정렬됩니다. (중간의 행은 더 큰 여유공간이 있는 것처럼 보여집니다.)</p>
 						<div class="line_code_box line_code_number mt_ms">
 							<ul>
 								<li>.box {</li>
@@ -641,7 +636,24 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-content : space-around;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-content-space-around.jpg" alt="align-content : space-around;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-space-around.svg" alt="align-content : space-around;" class="mt_m">
+						</figure>
+					</li>
+
+					<!-- space-evenly -->
+					<li class="tit_h4 mt_l">
+						<h4>space-evenly</h4>
+						<p class="mt_s">flex Item의 각 행이 flex container의 여백을 균등하게 나누어 정렬됩니다.</p>
+						<div class="line_code_box line_code_number mt_ms">
+							<ul>
+								<li>.box {</li>
+								<li class="indent">align-content : space-evenly;</li>
+								<li>}</li>
+							</ul>
+						</div>
+						<figure class="img_figure mt_m">
+							<figcaption class="mt_0">[align-content : space-evenly;]</figcaption>
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-content-space-evenly.svg" alt="align-content : space-evenly;" class="mt_m">
 						</figure>
 					</li>
 				</ol>
@@ -684,8 +696,8 @@
 			</div>
 			<figure class="img_figure mt_ml">
 				<figcaption class="mt_0">[align-items를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-align-items.svg" alt="align-items를 시각적으로 설명하는 다이어그램" class="mt_m max-w650">
-				<img src="/ukncs/images/css/flex-align-items.jpg" alt="align-items를 시각적으로 설명하는 다이어그램" class="mt_m max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-items_pc.svg" alt="align-items를 시각적으로 설명하는 다이어그램" class="mt_m dp_md_pc mg_center">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-items_md.svg" alt="align-items를 시각적으로 설명하는 다이어그램" class="mt_m dp_md mg_center">
 			</figure>
 
 			<div class="ol_lst indent mt_l">
@@ -707,7 +719,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-items: stretch;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-items-stretch.jpg" alt="align-items : stretch;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-items-stretch.svg" alt="align-items : stretch;" class="mt_m">
 						</figure>
 					</li>
 
@@ -726,7 +738,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-items: flex-start;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-items-flex-start.jpg" alt="align-items : flex-start;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-items-flex-start.svg" alt="align-items : flex-start;" class="mt_m">
 						</figure>
 					</li>
 
@@ -745,7 +757,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-items: flex-end;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-items-flex-end.jpg" alt="align-items : flex-end;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-items-flex-end.svg" alt="align-items : flex-end;" class="mt_m">
 						</figure>
 					</li>
 
@@ -764,7 +776,7 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-items: center;]</figcaption>
-							<img src="/ukncs/images/css/flexbox-align-items-center.jpg" alt="align-items : center;" class="mt_m max-w400">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-items-center.svg" alt="align-items : center;" class="mt_m">
 						</figure>
 					</li>
 
@@ -787,8 +799,8 @@
 						</div>
 						<figure class="img_figure mt_m">
 							<figcaption class="mt_0">[align-items: baseline;]</figcaption>
-							<img src="/ukncs/images/css/410px-Typography_Line_Terms.svg.png" alt="align-items : baseline;" class="mt_m max-w400"><br>
-							<img src="/ukncs/images/css/flexbox-align-items-baseline.jpg" alt="align-items : baseline;" class="mt_m max-w800">
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-typo_baseline.svg" alt="align-items : baseline;" class="mt_m"><br>
+							<img src="/ukncs/images/css/flexbox/uxkm_flexbox-align-items-baseline.svg" alt="align-items : baseline;" class="mt_m">
 						</figure>
 					</li>
 				</ol>
