- flex 이미지 작업 완료

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
@@ -14,7 +14,7 @@
 		</p>
 		<figure class="img_figure mt_m">
 			<figcaption class="mt_0">[Flexbox Items]</figcaption>
-			<img src="/ukncs/images/css/flex-items.svg" alt="Flexbox Container" class="mt_m max-w550">
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-items.svg" alt="Flexbox Container" class="mt_m">
 		</figure>
 
 		<!-- flex-grow -->
@@ -47,13 +47,13 @@
 			</div>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[flex-grow를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-grow.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="max-w550">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-grow.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_m">
 			</figure>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[모든 flex item이 동일한 flex-grow 속성값을 가지면 모든 flex item은 동일한 너비를 갖습니다.]</figcaption>
-				<img src="/ukncs/images/css/flexbox-flex-grow-1.jpg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class=" mt_s max-w750"><br>
-				<figcaption>[모든 flex item이 동일한 flex-grow 속성값을 가지면 모든 flex item은 동일한 너비를 갖습니다.]</figcaption>
-				<img src="/ukncs/images/css/flexbox-flex-grow-2.jpg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_s max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-grow-1.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class=" mt_s"><br>
+				<figcaption>[두번째 flex item의 flex-grow 속성값을 3으로 지정하면 다른 flex item보다 더 넓은 너비를 갖습니다.]</figcaption>
+				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-grow-2.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_s">
 			</figure>
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-grow.html">
 				<div class="uk_editor min-height-650" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -99,7 +99,7 @@
 
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[기본은 flex container의 너비에 마춰 축소 / 특정 flex item만 해제(flex-shrink: 0;)하면 원래 너비 유지]</figcaption>
-				<img src="/ukncs/images/css/flexbox-flex-shrink.jpg" alt="기본은 flex container의 너비에 마춰 축소 / 특정 flex item만 해제(flex-shrink: 0;)하면 원래 너비 유지" class=" mt_s max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-shrink.svg" alt="기본은 flex container의 너비에 마춰 축소 / 특정 flex item만 해제(flex-shrink: 0;)하면 원래 너비 유지" class=" mt_s">
 			</figure>
 
 			<p class="mt_m">
@@ -125,7 +125,8 @@
 			</p>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[flex-shrink]</figcaption>
-				<img src="/ukncs/images/css/flex-shrink.jpg" alt="flex-shrink" class=" mt_s max-w750">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-shrink_pc.svg" alt="flex-shrink" class="mt_s dp_md_pc mg_center">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-shrink_md.svg" alt="flex-shrink" class="mt_s dp_md mg_center">
 			</figure>
 
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-shrink.html">
@@ -197,8 +198,9 @@
 			</div>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[flex-basis를 적용한 flex item의 너비]</figcaption>
-				<img src="/ukncs/images/css/flexbox-flex-basis.jpg" alt="flex-basis를 적용한 flex item의 너비" class=" mt_m max-w750"><br>
-				<img src="/ukncs/images/css/flex-basis.jpg" alt="flex-basis를 적용한 flex item의 너비" class=" mt_m max-w900">
+				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-basis.svg" alt="flex-basis를 적용한 flex item의 너비" class=" mt_m"><br>
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-basis_pc.svg" alt="flex-basis를 적용한 flex item의 너비" class="mt_xl dp_md_pc mg_center">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-basis_md.svg" alt="flex-basis를 적용한 flex item의 너비" class="mt_xl dp_md mg_center">
 			</figure>
 			<!--
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-basis.html">
@@ -207,7 +209,7 @@
 				</div>
 			</section>
 			-->
-			<p class="mt_m t_blue">※ flex-basis 예제 준비</p>
+			<!--<p class="mt_m t_blue">※ flex-basis 예제 준비</p>-->
 			<aside class="browser_support mt_ml" data-tit="flex-basis">
 				<ul>
 					<li class="ie">11+</li>
@@ -388,12 +390,14 @@
 
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[align-self를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flex-align-self.svg" alt="align-self를 시각적으로 설명하는 다이어그램" class=" mt_s max-w550">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-self.svg" alt="align-self를 시각적으로 설명하는 다이어그램" class=" mt_s">
 			</figure>
+			<!--
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[아래 예시에 3번째, 4번째 flex item은 align-self 속성값이 우선 적용되어 정렬됩니다.]</figcaption>
 				<img src="/ukncs/images/css/flexbox-align-self.jpg" alt="아래 예시에 3번째, 4번째 flex item은 align-self 속성값이 우선 적용되어 정렬됩니다." class=" mt_s max-w600">
 			</figure>
+			-->
 
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-align-self.html">
 				<div class="uk_editor min-height-550" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -456,12 +460,14 @@
 			</div>
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[flex item의 배치 순서를 지정]</figcaption>
-				<img src="/ukncs/images/css/flex-order.svg" alt="flex item의 배치 순서를 지정" class=" mt_s max-w550">
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-order.svg" alt="flex item의 배치 순서를 지정" class=" mt_s">
 			</figure>
+			<!--
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0">[아래 예시에 3번째, 4번째 flex item은 align-self 속성값이 우선 적용되어 정렬됩니다.]</figcaption>
 				<img src="/ukncs/images/css/flexbox-order.jpg" alt="아래 예시에 3번째, 4번째 flex item은 align-self 속성값이 우선 적용되어 정렬됩니다." class=" mt_s max-w600">
 			</figure>
+			-->
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-order.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
